add some details

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My-Portfoliyo</title>
 </head>
 <body>
-<h1>Hello there</h1>
+<p>Hey There</p>
+    <p>I'm Chathurnga Dilshn</p>
+<img src=".idea/asserts/268360047_1391465557978657_3920844286985635606_n.jpg" width="450" height="750">
+<h1>About Me</h1>
+<h1>Skills</h1>
+<h1>Service</h1>
+<h1>Activities</h1>
+<h1>Gallery</h1>
 </body>
 </html>
