--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <p>Hey There</p>
     <p>I'm Chathurnga Dilshn</p>
-<img src=".idea/asserts/268360047_1391465557978657_3920844286985635606_n.jpg" width="450" height="750">
+<img src="asserts/268360047_1391465557978657_3920844286985635606_n.jpg" width="450" height="750">
 <h1>About Me</h1>
 <h1>Skills</h1>
 <h1>Service</h1>
