--- a/index.html
+++ b/index.html
@@ -5,13 +5,42 @@
     <title>My-Portfoliyo</title>
 </head>
 <body>
-<p>Hey There</p>
+    <p>Hey There</p>
     <p>I'm Chathurnga Dilshn</p>
-<img src="asserts/268360047_1391465557978657_3920844286985635606_n.jpg" width="450" height="750">
-<h1>About Me</h1>
-<h1>Skills</h1>
-<h1>Service</h1>
-<h1>Activities</h1>
-<h1>Gallery</h1>
+    <img src="asserts/pr.png" style="" width="450" height="750">
+    <h1>About Me</h1>
+    <p style="color: red"><b>Hey There</b></p>
+    <p style="color :#0085FF">I'm Chathuranga,</p>
+    <p><b>I’m a computer software engineering student at ijse(Institute of Software Engineering).</b></p>
+    <h1>Skills</h1>
+    <img src="asserts/index.png" alt="Java Logo" height="100" width="100">
+    <img src="asserts/MySql.png" alt="" width="100" height="100">
+    <img src="asserts/html.png" alt="" height="100" width="100">
+    <img src="asserts/Css.png " alt="" width="100" height="100" >
+    <img src="asserts/hibernete.jpg" alt="" height="100" width="100"><br/>
+    <img src="asserts/figma%20Logo.png" alt="" width="100" height="100">
+    <img src="asserts/intellij-idea.png" alt="" height="100" width="100">
+    <h1>Service</h1>
+    <img src="asserts/index.png" alt="" height="100" width="100">
+    <img src="asserts/MySql.png" alt="" width="100" height="100">
+    <img src="asserts/html.png" alt="" height="100" width="100">
+    <img src="asserts/Css.png " alt="" width="100" height="100" >
+    <img src="asserts/figma%20Logo.png" alt="" width="100" height="100">
+    <h1>Activities</h1>
+    <h1>Gallery</h1>
+    <img src="asserts/20220228_182243.jpg" alt="" width="450" height="750">
+    <img src="" alt="" width="" height="">
+    <img src="" alt="" width="" height="">
+    <img src="" alt="" width="" height="">
+    <img src="asserts/3bf2e921-2b4f-42f7-9d5b-b277a1b47dbe.jpg" alt="" height="750" width="450">
+    <h1>Contact Me</h1>
+    <img src="asserts/post-box.png" alt="" height="70" width="70"><P>Chathuaranag Dilshan<br/> 103/2,<br/>Pinhena Colony,<br/>Padagoda,<br/>Beruwala</P>
+    <img src="asserts/teli.png" alt="" height="70" width="70"><p>075-4313114/070-446</p>
+    <img src="asserts/email_gmail.png" alt="" height="70" width="70"><p>superdilshan999@gmail.com</p>
+    <img src="asserts/Facebook.png" alt="" height="70" width="70"><a href=" https://www.facebook.com/dilshan.chathuranga.75436/"> https://www.facebook.com/dilshan.chathuranga.75436/</a><br/>
+    <img src="asserts/instagram.png" alt="" height="70" width="70"><a href="https://www.instagram.com/chathu.ranga.dilshan/">https://www.instagram.com/chathu.ranga.dilshan/</a><br/>
+    <img src="asserts/Whatsapp.png" alt="" height="70" width="70"><p>075-4513114</p>
+    <img src="asserts/Telegram.png" alt="" height="70" width="70"><p>075-4513114</p>
+    <img src="asserts/MyLogo.png" alt="" height="150" width="150">
 </body>
 </html>
