--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <img src="asserts/hibernete.jpg" alt="" height="100" width="100"><br/>
     <img src="asserts/figma%20Logo.png" alt="" width="100" height="100">
     <img src="asserts/intellij-idea.png" alt="" height="100" width="100">
+    <img src="asserts/GitHub-Logo.png" alt="" height="100" width="100">
     <h1>Service</h1>
     <img src="asserts/index.png" alt="" height="100" width="100">
     <img src="asserts/MySql.png" alt="" width="100" height="100">
@@ -34,13 +35,16 @@
     <img src="" alt="" width="" height="">
     <img src="asserts/3bf2e921-2b4f-42f7-9d5b-b277a1b47dbe.jpg" alt="" height="750" width="450">
     <h1>Contact Me</h1>
-    <img src="asserts/post-box.png" alt="" height="70" width="70"><P>Chathuaranag Dilshan<br/> 103/2,<br/>Pinhena Colony,<br/>Padagoda,<br/>Beruwala</P>
-    <img src="asserts/teli.png" alt="" height="70" width="70"><p>075-4313114/070-446</p>
-    <img src="asserts/email_gmail.png" alt="" height="70" width="70"><p>superdilshan999@gmail.com</p>
+    <img src="asserts/post-box.png" alt="" height="70" width="70"><P>Chathuaranag Dilshan<br/> 103/2,<br/>Pinhena Colony,<br/>Padagoda,<br/>Beruwala</P><br/>
+    <img src="asserts/teli.png" alt="" height="70" width="70"><p>075-4313114/070-446</p><br/>
+    <img src="asserts/email_gmail.png" alt="" height="70" width="70"><p>superdilshan999@gmail.com</p><br/>
     <img src="asserts/Facebook.png" alt="" height="70" width="70"><a href=" https://www.facebook.com/dilshan.chathuranga.75436/"> https://www.facebook.com/dilshan.chathuranga.75436/</a><br/>
     <img src="asserts/instagram.png" alt="" height="70" width="70"><a href="https://www.instagram.com/chathu.ranga.dilshan/">https://www.instagram.com/chathu.ranga.dilshan/</a><br/>
-    <img src="asserts/Whatsapp.png" alt="" height="70" width="70"><p>075-4513114</p>
-    <img src="asserts/Telegram.png" alt="" height="70" width="70"><p>075-4513114</p>
-    <img src="asserts/MyLogo.png" alt="" height="150" width="150">
+    <img src="asserts/linkedin.png" alt="" height="70" width="70"><a href="https://www.linkedin.com/in/chathuranga-dilshan-9a709a244/">https://www.linkedin.com/in/chathuranga-dilshan-9a709a244/</a><br/>
+    <img src="asserts/Whatsapp.png" alt="" height="70" width="70"><p>075-4513114</p><br/>
+    <img src="asserts/Telegram.png" alt="" height="70" width="70"><p>075-4513114</p><br/>
+    <img src="asserts/GitHub-Logo.png" alt="" width="70" height="70"><a href="https://github.com/dilshan10" >https://github.com/dilshan10</a><br/>
+    <img src="asserts/MyLogo.png" align="Right" alt="" height="150" width="150"><br/>
+    <p align="Right">Copyright 2022 .Chathuranga Dilshan. All Rights Reserved. MIT License.</p>
 </body>
 </html>
