--- a/index.html
+++ b/index.html
@@ -8,48 +8,99 @@
         <meta name="description" content="This my web site. i try give you some idea about my self">
         <meta name="author" content="Chathuranga Dilshan">
         <meta name="owner" content="Chathuranga Dilshan">
+        <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum scale=1 user-scalable=no" >
+        <meta name="theme-color" content="blue">
     </head>
     <body>
-        <p>Hey There</p>
-        <p>I'm Chathurnga Dilshn</p>
-        <img src="asserts/pr.png" style="" width="450" height="750">
-        <h1>About Me</h1>
-        <p style="color: red"><b>Hey There</b></p>
-        <p style="color :#0085FF">I'm Chathuranga,</p>
-        <p><b>I’m a computer software engineering student at ijse(Institute of Software Engineering).</b></p>
-        <h1>Skills</h1>
-        <img src="asserts/index.png" alt="Java Logo" height="100" width="100">
-        <img src="asserts/MySql.png" alt="" width="100" height="100">
-        <img src="asserts/html.png" alt="" height="100" width="100">
-        <img src="asserts/Css.png " alt="" width="100" height="100" >
-        <img src="asserts/hibernete.jpg" alt="" height="100" width="100"><br/>
-        <img src="asserts/figma%20Logo.png" alt="" width="100" height="100">
-        <img src="asserts/intellij-idea.png" alt="" height="100" width="100">
-        <img src="asserts/GitHub-Logo.png" alt="" height="100" width="100">
-        <h1>Service</h1>
-        <img src="asserts/index.png" alt="" height="100" width="100">
-        <img src="asserts/MySql.png" alt="" width="100" height="100">
-        <img src="asserts/html.png" alt="" height="100" width="100">
-        <img src="asserts/Css.png " alt="" width="100" height="100" >
-        <img src="asserts/figma%20Logo.png" alt="" width="100" height="100">
-        <h1>Activities</h1>
-        <h1>Gallery</h1>
-        <img src="asserts/20220228_182243.jpg" alt="" width="450" height="750">
-        <img src="" alt="" width="" height="">
-        <img src="" alt="" width="" height="">
-        <img src="" alt="" width="" height="">
-        <img src="asserts/3bf2e921-2b4f-42f7-9d5b-b277a1b47dbe.jpg" alt="" height="750" width="450">
-        <h1>Contact Me</h1>
-        <img src="asserts/post-box.png" alt="" height="70" width="70"><P>Chathuaranag Dilshan<br/> 103/2,<br/>Pinhena Colony,<br/>Padagoda,<br/>Beruwala</P><br/>
-        <img src="asserts/teli.png" alt="" height="70" width="70"><p>075-4313114/070-446</p><br/>
-        <img src="asserts/email_gmail.png" alt="" height="70" width="70"><p>superdilshan999@gmail.com</p><br/>
-        <img src="asserts/Facebook.png" alt="" height="70" width="70"><a href=" https://www.facebook.com/dilshan.chathuranga.75436/"> https://www.facebook.com/dilshan.chathuranga.75436/</a><br/>
-        <img src="asserts/instagram.png" alt="" height="70" width="70"><a href="https://www.instagram.com/chathu.ranga.dilshan/">https://www.instagram.com/chathu.ranga.dilshan/</a><br/>
-        <img src="asserts/linkedin.png" alt="" height="70" width="70"><a href="https://www.linkedin.com/in/chathuranga-dilshan-9a709a244/">https://www.linkedin.com/in/chathuranga-dilshan-9a709a244/</a><br/>
-        <img src="asserts/Whatsapp.png" alt="" height="70" width="70"><p>075-4513114</p><br/>
-        <img src="asserts/Telegram.png" alt="" height="70" width="70"><p>075-4513114</p><br/>
-        <img src="asserts/GitHub-Logo.png" alt="" width="70" height="70"><a href="https://github.com/dilshan10" >https://github.com/dilshan10</a><br/>
-        <img src="asserts/MyLogo.png" align="Right" alt="" height="150" width="150"><br/>
-        <p align="Right">Copyright 2022 .Chathuranga Dilshan. All Rights Reserved. MIT License.</p>
+        <header style="background-color: #73A24E">
+            <aside>
+                <img src="asserts/MyLogo.png" width="50" height="50">
+            </aside>
+            <nav>
+                <button>About Me</button>
+                <button>Skils</button>
+                <button>Services</button>
+                <button>Activities</button>
+                <button>Gallery</button>
+                <button>Contact Me</button>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <img src="">
+            </section>
+            <section>
+                <p><p style="color: red">hey There !,</p>
+                    <blockquote>
+                    I'm Chathuranga Dilshan, A student of Ijse(intitue of Java Softwere Engineering.
+            </blockquote>
+                </p>
+            </section>
+            <section>
+                <center>
+                    <table>
+                        <tr>
+                            <th>
+                                <img src="asserts/index.png" height="150" width="125">
+                                <center><p>Java</p></center>
+                            </th>
+                            <th>
+                                <img src="asserts/MySql.png" height="200" width="200">
+                                <center><p>mySQL</p></center>
+                            </th>
+                            <th>
+                                <img src="asserts/html.png" height="150" width="150">
+                                <center><p>HTML</p></center>
+                            </th>
+                            <th>
+                                <img src="asserts/Css.png" height="150" width="150">
+                                <center><p>CSS</p></center>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <img src="asserts/intellij-idea.png" height="150" width="150">
+                                <center><p>Intellij-idea</p></center>
+                            </th>
+                            <th>
+                                <img src="asserts/hibernete.jpg" height="200" width="200">
+                                <center><p>Hibernete</p></center>
+                            </th>
+                            <th>
+                                <img src="asserts/figma%20Logo.png" height="150" width="200">
+                                <center><p>Figma</p></center>
+                            </th>
+                            <th>
+                                <img src="asserts/GitHub-Logo.png" height="125" width="175">
+                                <center><p>GitHub</p></center>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+
+                            </th>
+                            <th>
+                                <img src="asserts/Gimp.png" height="150" width="200">
+                                <center><p>Gimp Editer</p></center>
+                            </th>
+                            <th>
+
+                            </th>
+                            <th>
+
+                            </th>
+                        </tr>
+                    </table>
+                </center>
+            </section>
+            <section></section>
+            <section></section>
+            <section>
+            </section>
+            <section></section>
+        </main>
+        <footer style="background-color: #73A24E">
+            <center><img src="asserts/MyLogo.png" width="30" height="30"></center>
+        </footer>
     </body>
 </html>
