add some details

--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
                 <img src="asserts/MyLogo.png" width="50" height="50">
             </aside>
             <nav>
-                <button>About Me</button>
-                <button>Skils</button>
-                <button>Services</button>
-                <button>Activities</button>
-                <button>Gallery</button>
-                <button>Contact Me</button>
+                <a href=""><button>About Me</button></a>
+                <a href=""><button>Skils</button></a>
+                <a href=""><button>Services</button></a>
+                <a href=""><button>Activities</button></a>
+                <a href=""><button>Gallery</button></a>
+                <a href=""><button>Contact Me</button></a>
             </nav>
         </header>
         <main>
             <section>
-                <img src="">
+                <img src="asserts/Full%20Cover.png" height="750" width="1332">
             </section>
             <section>
+                <section STYLE="background-color: #73A24E">
+                    <h1>About Me</h1>
+                </section>
                 <p><p style="color: red">hey There !,</p>
                     <blockquote>
                     I'm Chathuranga Dilshan, A student of Ijse(intitue of Java Softwere Engineering.
@@ -37,67 +40,122 @@
                 </p>
             </section>
             <section>
+                <section STYLE="background-color: #73A24E">
+                    <h1>Skils</h1>
+                </section>
                 <center>
                     <table>
                         <tr>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/index.png" height="150" width="125">
                                 <center><p>Java</p></center>
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/MySql.png" height="200" width="200">
                                 <center><p>mySQL</p></center>
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/html.png" height="150" width="150">
                                 <center><p>HTML</p></center>
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/Css.png" height="150" width="150">
                                 <center><p>CSS</p></center>
                             </th>
                         </tr>
                         <tr>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/intellij-idea.png" height="150" width="150">
                                 <center><p>Intellij-idea</p></center>
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/hibernete.jpg" height="200" width="200">
                                 <center><p>Hibernete</p></center>
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/figma%20Logo.png" height="150" width="200">
                                 <center><p>Figma</p></center>
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/GitHub-Logo.png" height="125" width="175">
                                 <center><p>GitHub</p></center>
                             </th>
                         </tr>
                         <tr>
-                            <th>
+                            <th height="200">
 
                             </th>
-                            <th>
+                            <th height="200">
                                 <img src="asserts/Gimp.png" height="150" width="200">
                                 <center><p>Gimp Editer</p></center>
                             </th>
-                            <th>
+                            <th height="200">
 
                             </th>
-                            <th>
+                            <th height="200">
 
                             </th>
                         </tr>
                     </table>
                 </center>
             </section>
-            <section></section>
-            <section></section>
             <section>
+                <section STYLE="background-color: #73A24E">
+                    <h1>Services</h1>
+                </section>
             </section>
-            <section></section>
+            <section>
+                <section STYLE="background-color: #73A24E">
+                    <h1>Activities</h1>
+                </section>
+            </section>
+            <section>
+                <section STYLE="background-color: #73A24E">
+                    <h1>Gallery</h1>
+                </section>
+            </section>
+            <section>
+                <section STYLE="background-color: #73A24E">
+                    <h1>Contact Me</h1>
+                </section>
+                <section style="background-color: #928989">
+                    <table>
+                        <tr>
+                            <th >
+                                <img src="asserts/post-box.png" height="30" width="30">
+                            </th>
+                            <th>
+                                <p>103/2,<br>
+                                    Pinhena Colony,<br>
+                                    Padagoda,<br>
+                                    Beruwala,<br>
+                                    Kalithra,<br>
+                                    Sri Lanka.
+                                </p>
+                            </th>
+                            <th>
+                                <img src="asserts/post-box.png" height="30" width="30">
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <img src="asserts/post-box.png" height="30" width="30">
+                            </th>
+                            <th>
+                                <img src="asserts/post-box.png" height="30" width="30">
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <img src="asserts/post-box.png" height="30" width="30">
+                            </th>
+                            <th>
+                                <img src="asserts/post-box.png" height="30" width="30">
+                            </th>
+                        </tr>
+                    </table>
+                </section>
+            </section>
         </main>
         <footer style="background-color: #73A24E">
             <center><img src="asserts/MyLogo.png" width="30" height="30"></center>
