--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     </head>
     <body>
         <header style="background-color: #73A24E">
+                <img src="asserts/MyLogo.png" width="4%" height="4%">
             <aside>
-                <img src="asserts/MyLogo.png" width="50" height="50">
+                <nav>
+                    <a href=""><button>About Me</button></a>
+                    <a href=""><button>Skils</button></a>
+                    <a href=""><button>Services</button></a>
+                    <a href=""><button>Activities</button></a>
+                    <a href=""><button>Gallery</button></a>
+                    <a href=""><button>Contact Me</button></a>
+                </nav>
             </aside>
-            <nav>
-                <a href=""><button>About Me</button></a>
-                <a href=""><button>Skils</button></a>
-                <a href=""><button>Services</button></a>
-                <a href=""><button>Activities</button></a>
-                <a href=""><button>Gallery</button></a>
-                <a href=""><button>Contact Me</button></a>
-            </nav>
         </header>
         <main>
             <section>
-                <img src="asserts/Full%20Cover.png" height="750" width="1332">
+                <img src="asserts/Full%20_Cover.png" height="10%" width="100%">
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
@@ -44,7 +44,7 @@
                     <h1>Skils</h1>
                 </section>
                 <center>
-                    <table>
+                    <table width="75%">
                         <tr>
                             <th height="200">
                                 <img src="asserts/index.png" height="150" width="125">
@@ -158,7 +158,7 @@
             </section>
         </main>
         <footer style="background-color: #73A24E">
-            <center><img src="asserts/MyLogo.png" width="30" height="30"></center>
+            <center><img src="asserts/MyLogo.png" width="3%" height="3%"></center>
         </footer>
     </body>
 </html>
