--- a/index.html
+++ b/index.html
@@ -44,55 +44,55 @@
                     <h1>Skils</h1>
                 </section>
                 <center>
-                    <table width="75%">
+                    <table width="100%">
                         <tr>
-                            <th height="200">
-                                <img src="asserts/index.png" height="150" width="125">
+                            <th>
+                                <img src="asserts/index.png" height="70%" width="75%">
                                 <center><p>Java</p></center>
                             </th>
-                            <th height="200">
-                                <img src="asserts/MySql.png" height="200" width="200">
+                            <th>
+                                <img src="asserts/MySql.png" height="70%" width="75%">
                                 <center><p>mySQL</p></center>
                             </th>
-                            <th height="200">
-                                <img src="asserts/html.png" height="150" width="150">
+                            <th>
+                                <img src="asserts/html.png" height="70%" width="60%">
                                 <center><p>HTML</p></center>
                             </th>
-                            <th height="200">
-                                <img src="asserts/Css.png" height="150" width="150">
+                            <th>
+                                <img src="asserts/Css.png" height="30%" width="30%">
                                 <center><p>CSS</p></center>
                             </th>
                         </tr>
                         <tr>
-                            <th height="200">
-                                <img src="asserts/intellij-idea.png" height="150" width="150">
+                            <th>
+                                <img src="asserts/intellij-idea.png" height="70%" width="70%">
                                 <center><p>Intellij-idea</p></center>
                             </th>
-                            <th height="200">
-                                <img src="asserts/hibernete.jpg" height="200" width="200">
+                            <th>
+                                <img src="asserts/hibernete.jpg" height="75%" width="75%">
                                 <center><p>Hibernete</p></center>
                             </th>
-                            <th height="200">
-                                <img src="asserts/figma%20Logo.png" height="150" width="200">
+                            <th>
+                                <img src="asserts/figma%20Logo.png" height="70%" width="75%">
                                 <center><p>Figma</p></center>
                             </th>
-                            <th height="200">
-                                <img src="asserts/GitHub-Logo.png" height="125" width="175">
+                            <th >
+                                <img src="asserts/GitHub-Logo.png" height="35%" width="35%">
                                 <center><p>GitHub</p></center>
                             </th>
                         </tr>
                         <tr>
-                            <th height="200">
+                            <th>
 
                             </th>
-                            <th height="200">
-                                <img src="asserts/Gimp.png" height="150" width="200">
+                            <th>
+                                <img src="asserts/Gimp.png" height="70%" width="75%">
                                 <center><p>Gimp Editer</p></center>
                             </th>
-                            <th height="200">
+                            <th>
 
                             </th>
-                            <th height="200">
+                            <th>
 
                             </th>
                         </tr>
@@ -122,7 +122,7 @@
                     <table>
                         <tr>
                             <th >
-                                <img src="asserts/post-box.png" height="30" width="30">
+                                <img src="asserts/post-box.png" height="3%" width="3%">
                             </th>
                             <th>
                                 <p>103/2,<br>
