--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@
                 <section STYLE="background-color: #73A24E">
                     <h1>Services</h1>
                 </section>
+                <section>
+                    <center>
+                        <table width="100%">
+                            <tr>
+                                <th>
+                                    <img src="asserts/service1.png" height="50%" width="65%">
+                                </th>
+                                <th>
+                                    <img src="asserts/Service2.png" height="50%" width="65%">
+                                </th>
+                                <th>
+                                    <img src="asserts/service3.png" height="50%" width="65%">
+                                </th>
+                            </tr>
+                        </table>
+                    </center>
+                </section>
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
