--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
     </head>
     <body>
         <header style="background-color: #73A24E">
-                <img src="asserts/MyLogo.png" width="4%" height="4%">
-            <aside>
-                <nav>
-                    <a href=""><button>About Me</button></a>
-                    <a href=""><button>Skils</button></a>
-                    <a href=""><button>Services</button></a>
-                    <a href=""><button>Activities</button></a>
-                    <a href=""><button>Gallery</button></a>
-                    <a href=""><button>Contact Me</button></a>
-                </nav>
-            </aside>
+            <center>
+                <table width="100%">
+                    <tr>
+                        <td align="left">
+                            <img src="asserts/MyLogo.png" width="4%" height="4%">
+                        </td>
+                        <td align="right">
+                            <nav>
+                                <a href=""><button>About Me</button></a>
+                                <a href=""><button>Skils</button></a>
+                                <a href=""><button>Services</button></a>
+                                <a href=""><button>Activities</button></a>
+                                <a href=""><button>Gallery</button></a>
+                                <a href=""><button>Contact Me</button></a>
+                            </nav>
+                        </td>
+                    </tr>
+                </table>
+            </center>
         </header>
         <main>
             <section>
@@ -45,55 +53,48 @@
                 </section>
                 <center>
                     <table width="100%">
-                        <tr>
-                            <th>
-                                <img src="asserts/index.png" height="70%" width="75%">
+                        <tr >
+                            <th width="20%" height="50%">
+                                <img src="asserts/java.png" height="70%" width="75%">
                                 <center><p>Java</p></center>
                             </th>
-                            <th>
+                            <th width="20%" height="50%">
                                 <img src="asserts/MySql.png" height="70%" width="75%">
                                 <center><p>mySQL</p></center>
                             </th>
-                            <th>
-                                <img src="asserts/html.png" height="70%" width="60%">
+                            <th width="20%" height="50%">
+                                <img src="asserts/HTML.png" height="70%" width="60%">
                                 <center><p>HTML</p></center>
                             </th>
-                            <th>
-                                <img src="asserts/Css.png" height="30%" width="30%">
+                            <th width="20%" height="50%">
+                                <img src="asserts/CSS.png" height="70%" width="60%">
                                 <center><p>CSS</p></center>
+                            </th>
+                            <th width="20%" height="50%">
+                                <img src="asserts/javascript.png" height="70%" width="60%">
+                                <center><p>javascript</p></center>
                             </th>
                         </tr>
                         <tr>
-                            <th>
+                            <th width="20%" height="50%">
                                 <img src="asserts/intellij-idea.png" height="70%" width="70%">
                                 <center><p>Intellij-idea</p></center>
                             </th>
-                            <th>
+                            <th width="20%" height="50%">
                                 <img src="asserts/hibernete.jpg" height="75%" width="75%">
                                 <center><p>Hibernete</p></center>
                             </th>
-                            <th>
+                            <th width="20%" height="50%">
                                 <img src="asserts/figma%20Logo.png" height="70%" width="75%">
                                 <center><p>Figma</p></center>
                             </th>
-                            <th >
+                            <th width="20%" height="50%">
                                 <img src="asserts/GitHub-Logo.png" height="35%" width="35%">
                                 <center><p>GitHub</p></center>
                             </th>
-                        </tr>
-                        <tr>
-                            <th>
-
-                            </th>
-                            <th>
+                            <th width="20%" height="50%">
                                 <img src="asserts/Gimp.png" height="70%" width="75%">
                                 <center><p>Gimp Editer</p></center>
-                            </th>
-                            <th>
-
-                            </th>
-                            <th>
-
                             </th>
                         </tr>
                     </table>
@@ -129,6 +130,9 @@
             <section>
                 <section STYLE="background-color: #73A24E">
                     <h1>Gallery</h1>
+                </section>
+                <section>
+
                 </section>
             </section>
             <section>
