--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="UTF-8">
         <title>My-Portfoliyo</title>
@@ -21,12 +21,12 @@
                         </td>
                         <td align="right">
                             <nav>
-                                <a href=""><button>About Me</button></a>
-                                <a href=""><button>Skils</button></a>
-                                <a href=""><button>Services</button></a>
-                                <a href=""><button>Activities</button></a>
-                                <a href=""><button>Gallery</button></a>
-                                <a href=""><button>Contact Me</button></a>
+                                <a href="#aboutme"><button>About Me</button></a>
+                                <a href="#skils"><button>Skils</button></a>
+                                <a href="#services"><button>Services</button></a>
+                                <a href="#activities"><button>Activities</button></a>
+                                <a href="#gallery"><button>Gallery</button></a>
+                                <a href="#contactme"><button>Contact Me</button></a>
                             </nav>
                         </td>
                     </tr>
@@ -39,17 +39,23 @@
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
-                    <h1>About Me</h1>
+                    <h1><dfn id="aboutme">About Me</dfn></h1>
                 </section>
-                <p><p style="color: red">hey There !,</p>
-                    <blockquote>
-                    I'm Chathuranga Dilshan, A student of Ijse(intitue of Java Softwere Engineering.
-            </blockquote>
-                </p>
+                    <p style="color: red">
+                        hey There !,
+                    </p>
+                    <center>
+                        <p>
+                            I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank"><abbr title="(Intitue of Java Softwere Engineering)"><b><em>IJSE</em></b></abbr></a>.
+                            I look forward to becoming a full stack softwere developer in a few more years.
+                            Now I started my journey for it.I have some knowledge about <b>java,mySQL</b>,<abbr title="Object-oriented programming"><b>OOP</b></abbr> Concepts.
+                            I can also use new technologies like Hibernate.I can create websites and webpages using <abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript
+                        </p>
+                    </center>
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
-                    <h1>Skils</h1>
+                    <h1><dfn id="skils">Skils</dfn></h1>
                 </section>
                 <center>
                     <table width="100%">
@@ -102,7 +108,7 @@
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
-                    <h1>Services</h1>
+                    <h1><dfn id="services"> Services</dfn></h1>
                 </section>
                 <section>
                     <center>
@@ -124,12 +130,12 @@
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
-                    <h1>Activities</h1>
+                    <h1><dfn id="activities">Activities</dfn></h1>
                 </section>
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
-                    <h1>Gallery</h1>
+                    <h1><dfn id="gallery">Gallery</dfn></h1>
                 </section>
                 <section>
 
@@ -137,41 +143,32 @@
             </section>
             <section>
                 <section STYLE="background-color: #73A24E">
-                    <h1>Contact Me</h1>
+                    <h1><dfn id="contactme">Contact Me</dfn></h1>
                 </section>
                 <section style="background-color: #928989">
-                    <table>
+                    <table width="25%">
                         <tr>
-                            <th >
-                                <img src="asserts/post-box.png" height="3%" width="3%">
-                            </th>
-                            <th>
-                                <p>103/2,<br>
-                                    Pinhena Colony,<br>
-                                    Padagoda,<br>
-                                    Beruwala,<br>
-                                    Kalithra,<br>
+                            <td style="align:left" width="10%">
+                                <img src="asserts/post-box.png" height="50%" width="100%">
+                            </td>
+                            <td style="align:left">
+                                <p>103/2,
+                                    Pinhena Colony,
+                                    Padagoda,
+                                    Beruwala,
+                                    Kalithra,
                                     Sri Lanka.
                                 </p>
-                            </th>
-                            <th>
-                                <img src="asserts/post-box.png" height="30" width="30">
-                            </th>
+                            </td>
                         </tr>
                         <tr>
                             <th>
-                                <img src="asserts/post-box.png" height="30" width="30">
-                            </th>
-                            <th>
-                                <img src="asserts/post-box.png" height="30" width="30">
-                            </th>
-                        </tr>
-                        <tr>
-                            <th>
-                                <img src="asserts/post-box.png" height="30" width="30">
-                            </th>
-                            <th>
-                                <img src="asserts/post-box.png" height="30" width="30">
+                                <a href="tel:+940754313114"><img src="asserts/teli.png" height="100%" width="100%%"></a>
+                                <a href="mailto:superdilshan999@gmail.com"><img src="asserts/email_gmail.png " height="100%" width="100%"></a>
+                                <a href=""></a>
+                                <a href=""> </a>
+                                <a href=""> </a>
+                                <a href=""> </a>
                             </th>
                         </tr>
                     </table>
