--- a/index.html
+++ b/index.html
@@ -3,180 +3,193 @@
     <head>
         <meta charset="UTF-8">
         <title>My-Portfoliyo</title>
-        <link rel="icon" href="asserts/MyLogo.png">
+        <link rel="icon" href="asserts/imges/MyLogo.png">
         <meta name="keyword" content="Chathuranga Dilshan,about Chathuranga Dilshan">
         <meta name="description" content="This my web site. i try give you some idea about my self">
         <meta name="author" content="Chathuranga Dilshan">
         <meta name="owner" content="Chathuranga Dilshan">
         <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum scale=1 user-scalable=no" >
         <meta name="theme-color" content="blue">
+        <link rel="stylesheet" href="asserts/CSS/stylesheet.css">
     </head>
     <body>
-        <header style="background-color: #73A24E">
-            <center>
-                <table width="100%">
-                    <tr>
-                        <td align="left">
-                            <img src="asserts/MyLogo.png" width="4%" height="4%">
-                        </td>
-                        <td align="right">
-                            <nav>
-                                <a href="#aboutme"><button>About Me</button></a>
-                                <a href="#skils"><button>Skils</button></a>
-                                <a href="#services"><button>Services</button></a>
-                                <a href="#activities"><button>Activities</button></a>
-                                <a href="#gallery"><button>Gallery</button></a>
-                                <a href="#contactme"><button>Contact Me</button></a>
-                            </nav>
-                        </td>
-                    </tr>
-                </table>
-            </center>
+        <header class="hedinSect">
+            <img src="asserts/imges/MyLogo.png" id="uplogo">
+            <aside>
+                <nav>
+                    <a href="#aboutme"><button>About Me</button></a>
+                    <a href="#skils"><button>Skils</button></a>
+                    <a href="#services"><button>Services</button></a>
+                    <a href="#activities"><button>Activities</button></a>
+                    <a href="#gallery"><button>Gallery</button></a>
+                    <a href="#contactme"><button>Contact Me</button></a>
+                </nav>
+            </aside>
         </header>
         <main>
-            <section>
-                <img src="asserts/Full%20_Cover.png" height="10%" width="100%">
+            <section style="height: 10%;width: 100%">
+                <img src="asserts/imges/Full%20_Cover.png" alt="Cover Photo" height="100%" width="100%">
+                <hr>
             </section>
             <section>
-                <section STYLE="background-color: #73A24E">
+                <section class="hedinSect" >
                     <h1><dfn id="aboutme">About Me</dfn></h1>
                 </section>
-                    <p style="color: red">
+                    <p id="hey">
                         hey There !,
                     </p>
-                    <center>
-                        <p>
+                    <p id="AbMe">
                             I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank"><abbr title="(Intitue of Java Softwere Engineering)"><b><em>IJSE</em></b></abbr></a>.
                             I look forward to becoming a full stack softwere developer in a few more years.
                             Now I started my journey for it.I have some knowledge about <b>java,mySQL</b>,<abbr title="Object-oriented programming"><b>OOP</b></abbr> Concepts.
                             I can also use new technologies like Hibernate.I can create websites and webpages using <abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript
-                        </p>
-                    </center>
+                    </p>
+                <hr>
             </section>
             <section>
-                <section STYLE="background-color: #73A24E">
+                <section class="hedinSect">
                     <h1><dfn id="skils">Skils</dfn></h1>
                 </section>
                 <center>
                     <table width="100%">
-                        <tr >
-                            <th width="20%" height="50%">
-                                <img src="asserts/java.png" height="70%" width="75%">
-                                <center><p>Java</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/MySql.png" height="70%" width="75%">
-                                <center><p>mySQL</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/HTML.png" height="70%" width="60%">
-                                <center><p>HTML</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/CSS.png" height="70%" width="60%">
-                                <center><p>CSS</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/javascript.png" height="70%" width="60%">
-                                <center><p>javascript</p></center>
-                            </th>
-                        </tr>
-                        <tr>
-                            <th width="20%" height="50%">
-                                <img src="asserts/intellij-idea.png" height="70%" width="70%">
-                                <center><p>Intellij-idea</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/hibernete.jpg" height="75%" width="75%">
-                                <center><p>Hibernete</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/figma%20Logo.png" height="70%" width="75%">
-                                <center><p>Figma</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/GitHub-Logo.png" height="35%" width="35%">
-                                <center><p>GitHub</p></center>
-                            </th>
-                            <th width="20%" height="50%">
-                                <img src="asserts/Gimp.png" height="70%" width="75%">
-                                <center><p>Gimp Editer</p></center>
-                            </th>
-                        </tr>
+                        <tbody>
+                            <tr >
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/java.png" height="70%" width="75%">
+                                    <p>Java</p>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/MySql.png" height="70%" width="75%">
+                                    <p>mySQL</p>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/HTML.png" height="70%" width="60%">
+                                    <p>HTML</p>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/CSS.png" height="70%" width="60%">
+                                    <p>CSS</p>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/javascript.png" height="70%" width="60%">
+                                    <p>javascript</p>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/intellij-idea.png" height="70%" width="70%">
+                                    <center><p>Intellij-idea</p></center>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/hibernete.jpg" height="75%" width="75%">
+                                    <center><p>Hibernete</p></center>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/figma%20Logo.png" height="70%" width="75%">
+                                    <center><p>Figma</p></center>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/GitHub-Logo.png" height="35%" width="35%">
+                                    <center><p>GitHub</p></center>
+                                </th>
+                                <th width="20%" height="50%">
+                                    <img src="asserts/imges/Gimp.png" height="70%" width="75%">
+                                    <center><p>Gimp Editer</p></center>
+                                </th>
+                            </tr>
+                        </tbody>
                     </table>
                 </center>
+                <hr>
             </section>
             <section>
-                <section STYLE="background-color: #73A24E">
+                <section class="hedinSect">
                     <h1><dfn id="services"> Services</dfn></h1>
                 </section>
                 <section>
                     <center>
                         <table width="100%">
-                            <tr>
-                                <th>
-                                    <img src="asserts/service1.png" height="50%" width="65%">
-                                </th>
-                                <th>
-                                    <img src="asserts/Service2.png" height="50%" width="65%">
-                                </th>
-                                <th>
-                                    <img src="asserts/service3.png" height="50%" width="65%">
-                                </th>
-                            </tr>
+                            <tbody>
+                                <tr>
+                                    <th>
+                                        <img src="asserts/imges/service1.png" height="50%" width="65%">
+                                    </th>
+                                    <th>
+                                        <img src="asserts/imges/Service2.png" height="50%" width="65%">
+                                    </th>
+                                    <th>
+                                        <img src="asserts/imges/service3.png" height="50%" width="65%">
+                                    </th>
+                                </tr>
+                            </tbody>
                         </table>
                     </center>
                 </section>
+                <hr>
             </section>
             <section>
-                <section STYLE="background-color: #73A24E">
+                <section class="hedinSect">
                     <h1><dfn id="activities">Activities</dfn></h1>
                 </section>
+                <section>
+                    <object type="application/pdf" data="asserts/pdf/Assignment%2002.pdf" height="500" width="500"></object>
+                </section>
+                <hr>
             </section>
             <section>
-                <section STYLE="background-color: #73A24E">
+                <section class="hedinSect">
                     <h1><dfn id="gallery">Gallery</dfn></h1>
                 </section>
                 <section>
 
                 </section>
+                <hr>
             </section>
             <section>
-                <section STYLE="background-color: #73A24E">
+                <section class="hedinSect">
                     <h1><dfn id="contactme">Contact Me</dfn></h1>
                 </section>
-                <section style="background-color: #928989">
-                    <table width="25%">
-                        <tr>
-                            <td style="align:left" width="10%">
-                                <img src="asserts/post-box.png" height="50%" width="100%">
-                            </td>
-                            <td style="align:left">
-                                <p>103/2,
-                                    Pinhena Colony,
-                                    Padagoda,
-                                    Beruwala,
-                                    Kalithra,
-                                    Sri Lanka.
-                                </p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>
-                                <a href="tel:+940754313114"><img src="asserts/teli.png" height="100%" width="100%%"></a>
-                                <a href="mailto:superdilshan999@gmail.com"><img src="asserts/email_gmail.png " height="100%" width="100%"></a>
-                                <a href=""></a>
-                                <a href=""> </a>
-                                <a href=""> </a>
-                                <a href=""> </a>
-                            </th>
-                        </tr>
+                <section class="footset">
+                            <img src="asserts/imges/post-box.png" id="post">
+                            <p>103/2, Pinhena Colony, Padagoda, Beruwala, Kaluthra, Sri Lanka.</p>
+                    <table width="10%">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <a href="tel:+940754313114"><img src="asserts/imges/teli.png" height="100%" width="100%%"></a>
+                                </td>
+                                <td>
+                                    <a href="mailto:superdilshan999@gmail.com"><img src="asserts/imges/email_gmail.png " height="100%" width="100%"></a>
+                                </td>
+                                <td>
+                                    <a href=""></a>
+                                </td>
+                                <td>
+                                    <a href=""> </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="tel:+940754313114"><img src="asserts/imges/teli.png" height="100%" width="100%%"></a>
+                                </td>
+                                <td>
+                                    <a href="mailto:superdilshan999@gmail.com"><img src="asserts/imges/email_gmail.png " height="100%" width="100%"></a>
+                                </td>
+                                <td>
+                                    <a href=""></a>
+                                </td>
+                                <td>
+                                    <a href=""> </a>
+                                </td>
+                            </tr>
+                        </tbody>
                     </table>
                 </section>
+                <hr>
             </section>
         </main>
-        <footer style="background-color: #73A24E">
-            <center><img src="asserts/MyLogo.png" width="3%" height="3%"></center>
+        <footer class="hedinSect">
+            <center><img src="asserts/imges/MyLogo.png" width="3%" height="3%"></center>
         </footer>
     </body>
 </html>
