--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <img src="asserts/imges/MyLogo.png" id="uplogo">
             <aside>
                 <nav>
-                    <a href="#aboutme"><button>About Me</button></a>
-                    <a href="#skils"><button>Skils</button></a>
-                    <a href="#services"><button>Services</button></a>
-                    <a href="#activities"><button>Activities</button></a>
-                    <a href="#gallery"><button>Gallery</button></a>
-                    <a href="#contactme"><button>Contact Me</button></a>
+                    <a href="#aboutme"><button id="btnabme">About Me</button></a>
+                    <a href="#skils"><button id="btnskil">Skils</button></a>
+                    <a href="#services"><button id="btnser">Services</button></a>
+                    <a href="#activities"><button id="btnact">Activities</button></a>
+                    <a href="#gallery"><button id="btngallery">Gallery</button></a>
+                    <a href="#contactme"><button id="btncon">Contact Me</button></a>
                 </nav>
             </aside>
         </header>
