--- a/assigments/CSS/case_1/case_1.html
+++ b/assigments/CSS/case_1/case_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CSS case 01</title>
     <link rel="stylesheet" href=href="asserts/CSS/normalize.css">
     <style>
         main{
