add case 4 final

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </aside>
         </header>
         <main>
-            <section style="height: 10%;width: 100%">
+            <section style="height: 10%;width: 100%" id="cover">
                 <img src="asserts/imges/Full%20_Cover.png" alt="Cover Photo" height="100%" width="100%">
                 <hr>
             </section>
@@ -187,9 +187,10 @@
                 </section>
                 <hr>
             </section>
+            <a href=""><div></div></a>
         </main>
         <footer class="hedinSect">
-            <center><img src="asserts/imges/MyLogo.png" width="3%" height="3%"></center>
+            <img src="asserts/imges/MyLogo.png" width="3%" height="3%">
         </footer>
     </body>
 </html>
