--- a/assigments/CSS/case_2/case_2.html
+++ b/assigments/CSS/case_2/case_2.html
@@ -24,9 +24,17 @@
             padding: 5px;
             color: black;
             top: 25%;
+            border-right: 2px solid black;
         }
-        header>nav>ul>li>i{
+        header>nav>ul>li>a{
+            color: black;
+            text-decoration: none;
+        }
+        header>nav>ul>li>a>i{
             padding-right: 10px;
+        }
+        ul>li:hover a{
+            color: red;
         }
         header>img{
             position: relative;
@@ -52,17 +60,46 @@
             padding-left: 10px;
             margin-bottom: 10px;
         }
-        main>nav>ul>li>i{
+        main>nav>ul>li>a{
+            color: white;
+            text-decoration: none;
+        }
+        main>nav>ul>li>a>i{
             padding-right: 10px;
         }
         main>section{
-            margin-left: 270px;;
+            margin-left: 255px;;
+        }
+        main>section>section:nth-child(1){
+            position: relative;
+            height: 300px;
+        }
+        main > section>section:nth-child(1)>div{
+            height: 100%;
+            width: calc(100% / 3);
+            position: absolute;
+            border: 1px solid rgba(0, 0, 0, 0.33);
+        }
+        main>section>section:nth-child(2)>article>p:nth-child(1){
+            margin-top: 18px;
         }
         main>section>section:nth-child(2)>article>p{
             margin-top: 0px;
         }
         main>section:nth-child(2)>section:nth-child(1)>div:nth-child(1){
+            left:0;
             background: url("asserts/gif.gif");
+            margin-top: 15px;
+        }
+        main>section:nth-child(2)>section:nth-child(1)>div:nth-child(2){
+            left: calc(100%/3);
+            background: url("asserts/gif.gif");
+            margin-top: 15px;
+        }
+        main>section:nth-child(2)>section:nth-child(1)>div:nth-child(3){
+            right: 0;
+            background: url("asserts/gif.gif");
+            margin-top: 15px;
         }
         footer{
             height: 50px;
@@ -83,20 +120,20 @@
     <img alt="IJSE Logo" src="asserts/ijse-logo.png">
     <nav>
         <ul>
-            <li><i class="fa-solid fa-house"></i>Home</li>
-            <li><i class="fa-solid fa-earth-asia"></i>Services</li>
-            <li><i class="fa-solid fa-headphones"></i>Contact</li>
-            <li><i class="fa-solid fa-address-card"></i>About Us</li>
+            <li><a href="https://www.ijse.lk/" rel="to IJSE home Page" target="_blank"><i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a href="#"><i class="fa-solid fa-earth-asia"></i>Services</a></li>
+            <li><a href="#"><i class="fa-solid fa-headphones"></i>Contact</a></li>
+            <li><a href="#"><i class="fa-solid fa-address-card"></i>About Us</a></li>
         </ul>
     </nav>
 </header>
 <main>
     <nav>
         <ul>
-            <li><i class="fa-solid fa-house"></i>Home</li>
-            <li><i class="fa-solid fa-earth-asia"></i>Services</li>
-            <li><i class="fa-solid fa-headphones"></i>Contact</li>
-            <li><i class="fa-solid fa-address-card"></i>About Us</li>
+            <li><a href="https://www.ijse.lk/" rel="to IJSE home Page" target="_blank"><i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a href="#"><i class="fa-solid fa-earth-asia"></i>Services</a></li>
+            <li><a href="#"><i class="fa-solid fa-headphones"></i>Contact</a></li>
+            <li><a href="#"><i class="fa-solid fa-address-card"></i>About Us</a></li>
         </ul>
     </nav>
     <section>
